updated database migrations, removed maintainer table and model, added relationship with report to User instead. Changed Image table to Files table, updated the openAPI spec accordingly. Refactored ReportsController
